syntax = "proto3";

package pb;

service Order {
    rpc CreateOrder (orderRequest) returns (orderCommonReply) {

    }
    rpc GetOrderList (orderRequest) returns (orderReply) {

    }
    rpc GetOrderStatistic (orderRequest) returns (orderStatisticReply) {

    }
}

message orderRequest {
    string orderId = 1;
    string goodsUuid = 2;
    int64 goodsTypeId = 3;
    string primaryType = 4;
    string secondaryType = 5;
    string img = 6;
    string title = 7;
    string subtitle = 8;
    int64 price = 9;
    string orderStatus = 10;
    string userName = 11;
    string nickName = 12;
    string mobile = 13;
    string email = 14;
    string avatar = 15;
    int64 pageIndex = 16;
    int64 pageSize = 17;
}

message orderReplyItem {
    string orderId = 1;
    string goodsUuid = 2;
    int64 goodsTypeId = 3;
    string primaryType = 4;
    string secondaryType = 5;
    string img = 6;
    string title = 7;
    string subtitle = 8;
    int64 price = 9;
    string orderStatus = 10;
    string userName = 11;
}

message orderReply {
    repeated orderReplyItem data = 1;
}

message orderStatisticItem {
    string goodsType = 1;
    int64 count = 2;
}

message orderStatisticReply {
    repeated orderStatisticItem data = 1;
}

message orderCommonReply {
    string msg = 1;
}